# joaquin

./: .gitignore  README.md  setup.cfg  setup.py
joaquin/: __init__.py  apogee_data.py  config.py  crossval.py  data.py  data_helpers.py  design_matrix.py  features.py  filters.py  joaquin.py  logger.py  neighborhoods.py  plot.py
joaquin/cli/: helpers.py  main.py  make_neighborhoods.py  run.py  train.py
joaquin/tests/: test_crossval.py
text/: .gitignore  Makefile  joaquin-dr17.tex
