[metadata]
name = joaquin
author = Adrian M. Price-Whelan
author_email = adrianmpw@gmail.com
description = Spectrophotometric distances as a service
long_description = file: README.md
license = MIT
license_file = LICENSE
url = https://github.com/adrn/joaquin
edit_on_github = False
github_project = adrn/joaquin
python_requires = ">=3.7"

[options]
zip_safe = False
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    numpy
    astropy>=4.0
    schwimmbad
    scipy
    h5py
    tqdm
    threadpoolctl
    pyyaml
    scikit-learn
    gala
python_requires = >=3.7
include_package_data = true

# [options.extras_require]
# docs =
#     sphinx
#     sphinx-astropy
#     IPython
#     jupyter_client
#     ipykernel
#     furo

[options.package_data]
joaquin.pkgdata =
    *.py
    *.yml
# joaquin.tests =
#     *.fits
#     coveragerc

[options.entry_points]
console_scripts =
    joaquin = joaquin.cli:main

[tool:pytest]
testpaths = "joaquin"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
norecursedirs = _build _static examples tmp*

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
max_line_length = 80

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
